# projectx

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: auth.rs  error.rs  lib.rs  main.rs
app/src/context/: mod.rs
app/src/context/sys/: mod.rs
app/src/context/sys/adapter/: mod.rs
app/src/context/sys/adapter/repository/: config.rs
app/src/context/sys/adapter/repository/po/: config.rs
app/src/context/sys/application/: dto.rs  mod.rs  service.rs
app/src/context/user/: mod.rs
app/src/context/user/adapter/: mod.rs
app/src/context/user/adapter/client/: config.rs  jwt.rs  mod.rs
app/src/context/user/adapter/controller/: mod.rs  organization.rs  user.rs
app/src/context/user/adapter/publisher/: mod.rs  user.rs
app/src/context/user/adapter/repository/: mod.rs  organization.rs  role.rs  team.rs  user.rs
app/src/context/user/adapter/repository/po/: organization.rs  permission.rs  role.rs  team.rs  user.rs  user_profile.rs  user_role.rs
app/src/context/user/application/: dto.rs  mod.rs  service.rs
application/interface/: Cargo.toml
application/interface/src/: utils.rs  workspace.rs
application/system/: Cargo.toml
application/system/src/: lib.rs
application/system/src/adapter/repository/: config.rs
application/user/: Cargo.toml
application/user/src/: lib.rs
application/user/src/adapter/: mod.rs
application/user/src/adapter/repository/: mod.rs  organization.rs
application/user/src/adapter/repository/po/: organization.rs  permission.rs  role.rs  role_permission.rs  team.rs  team_member.rs  user.rs  user_profile.rs  user_role.rs
application/workspace/: Cargo.toml
application/workspace/src/: lib.rs
application/workspace/src/adapter/: mod.rs
application/workspace/src/adapter/client/: user.rs
application/workspace/src/adapter/repository/: mod.rs  space.rs
application/workspace/src/adapter/repository/po/: mod.rs  space.rs  status.rs  tag.rs
application/workspace/src/application/: service.rs
boot/: Cargo.toml
boot/src/: args.rs  auth.rs  config.rs  error.rs  index.rs  lib.rs  main.rs
boot/src/api/: global.rs  mod.rs  organization.rs  space.rs  user.rs
boot/src/controller/: mod.rs  space.rs  template.rs  user.rs
crates/application/interface/src/: auth.rs  error.rs  lib.rs  system.rs  user.rs  workspace.rs
crates/application/system/src/: lib.rs
crates/application/system/src/adapter/: mod.rs
crates/application/system/src/adapter/repository/: mod.rs
crates/application/system/src/adapter/repository/po/: config.rs  mod.rs
crates/application/system/src/application/: service.rs
crates/application/user/: Cargo.toml
crates/application/user/src/adapter/: mod.rs
crates/application/user/src/adapter/client/: config.rs  jwt.rs  mod.rs
crates/application/user/src/adapter/publisher/: user.rs
crates/application/user/src/adapter/repository/: mod.rs  role.rs  team.rs  user.rs
crates/application/user/src/adapter/repository/po/: mod.rs  organization.rs  permission.rs  role_permission.rs  team.rs  team_member.rs  user.rs  user_profile.rs
crates/application/user/src/application/: service.rs
crates/application/workspace/: Cargo.toml
crates/application/workspace/src/adapter/: mod.rs
crates/application/workspace/src/adapter/client/: global.rs  mod.rs  user.rs
crates/application/workspace/src/adapter/repository/: mod.rs  space.rs
crates/application/workspace/src/adapter/repository/po/: field.rs  mod.rs  space.rs  space_member.rs  status.rs  work_item_set.rs
crates/application/workspace/src/application/: service.rs
crates/domain/user/src/: facade.rs  publisher.rs  repository.rs
crates/domain/workspace/src/: enums.rs  facade.rs  repository.rs  service.rs
crates/domain/workspace/src/model/: mod.rs  project.rs  role.rs  user.rs  value.rs
crates/domain/workspace/src/model/setting/: base.rs  field.rs  global.rs  space_work_item_set.rs  status.rs  work_time_type.rs
crates/mem-event-bus/src/: lib.rs
domain/: Cargo.toml
domain/common/: Cargo.toml
domain/common/src/: error.rs  lib.rs
domain/src/: error.rs  lib.rs
domain/src/sys/: model.rs  repository.rs  service.rs
domain/src/user/: facade.rs  model.rs  publisher.rs  repository.rs  service.rs
domain/src/workspace/: enums.rs
domain/src/workspace/model/: global.rs  local.rs
domain/system/: Cargo.toml
domain/system/src/: model.rs  repository.rs  service.rs
domain/user/: Cargo.toml
domain/user/src/: lib.rs  model.rs  service.rs
domain/workspace/: Cargo.toml
domain/workspace/src/: enums.rs  facade.rs  lib.rs  repository.rs  service.rs
domain/workspace/src/model/: mod.rs  tag.rs  user.rs  value.rs
domain/workspace/src/model/setting/: base.rs  global.rs  mod.rs  template.rs
mem-event-bus/: Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
