# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "app",
    "domain",
    "mem-event-bus"
]

exclude = [
    "migration"
]


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
strip = true