[workspace]
resolver = "2"
members = [
    "boot",
    "application/interface",
    "application/user",
    "application/system",
    "application/workspace",
    "domain/common",
    "domain/user",
    "domain/system",
    "domain/workspace",
    "mem-event-bus"
]



[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
strip = true