[package]
name = "app"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]



[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.4.13", features = ["cargo"] }
once_cell = "1.19.0"
itertools = "0.12.0"

tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.7.4", features = ["json", "ws", "tracing", "multipart"] }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }

validator = { version = "0.16.1", features = ["derive"] }
axum-valid = "0.14.0"
sqlx-core = { version = "0.7.3", features = ["_rt-tokio"] }
sea-orm = { version = "0.12.10", features = ["sqlx-mysql", "runtime-tokio", "macros", "with-chrono", ] }
tantivy = "0.21.1"

ctor = "0.2.6"
bytes = "1.5.0"
dashmap = "5.5.3"
thiserror = "1.0.50"
async-trait = "0.1.74"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
jsonwebtoken = "9.2.0"


serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"

domain = { path = "../domain" }
mem-event-bus = { path = "../mem-event-bus" }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
