[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
thiserror = "1.0.50"
async-trait = "0.1.74"
chrono = "0.4.31"
md5 = "0.7.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
json = "0.12.4"
passwords = "3.1.16"
rand = "0.8.5"
pinyin = "0.10"
itertools = "0.12.0"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
