[package]
name = "app-interface"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
once_cell = "1.19.0"
itertools = "0.11.0"
validator = { version = "0.16.1", features = ["derive"] }
sea-orm = { version = "0.12.10", features = ["sqlx-mysql", "runtime-tokio", "macros", "with-chrono", ] }
tantivy = "0.21.1"
thiserror = "1.0.50"
async-trait = "0.1.74"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.193", features = ["derive"] }
anymap2 = "0.13.0"

domain-common = { path = "../../domain/common" }
domain-system = { path = "../../domain/system" }
domain-user = { path = "../../domain/user" }
domain-workspace = { path = "../../domain/workspace" }
mem-event-bus = { path = "../../mem-event-bus" }
